Fixed popup displaying on small-medium dimensions

--- a/scss/components/_popup.scss
+++ b/scss/components/_popup.scss
@@ -34,6 +34,11 @@
       display: inline-block;
       transition: all .2s;
       line-height: 1;
+
+      @include respond(large) {
+        top: 1rem;
+        right: 1rem;
+      }
     }
 
     &:hover {
@@ -58,6 +63,15 @@
   &__left {
     width: 33.3%;
     display: table-cell;
+
+    @include respond(large) {
+      display: table-row;
+      width: 100%;
+
+      & > img {
+        display: none;
+      }
+    }
   }
 
   &__right {
@@ -65,6 +79,12 @@
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem;
+
+    @include respond(large) {
+      padding: 1rem 3rem;
+      display: block;
+      width: 100%;
+    }
   }
 
   &__img {
@@ -79,6 +99,11 @@
     column-count: 2;
     column-gap: 4rem;
     column-rule: 1px solid $color-grey-light-2;
+
+    @include respond(large) {
+      column-count: 1;
+      margin-bottom: 1rem;
+    }
 
     -moz-hyphens: auto;
     -ms-hyphens: auto;
